shared/scss/options.scss
@use 'sass:meta';
@use 'vars';
@use 'mixins';

/* Generic menu list styling */
@include mixins.default_list();

/* Generic toggle button styling */
@include mixins.toggle_button();

@include meta.load-css('views/extension-page');

/* allowlist */
@include meta.load-css('views/allowlist');

.options-info {
    font-weight: bold;
    margin-bottom: 10px;
    color: vars.$slate;
}

.options-content__privacy {
    li {
        font-weight: bold;
    }

    // Correct vertical centering of the toggle
    .toggle-button {
        margin-top: -4px;
    }
}

.fire-button-toggle {
    height: 30px;
    padding: 0px 0px 1px 0px;
}

button:disabled {
    background-color: vars.$color--light-slate;
}

.js-options-set-config-url {
    height: 36px !important;
}

.custom-config-button {
    width: 120px;
    height: 30px;
    border-radius: 4px;
    background-color: vars.$blue;
    line-height: 1.5;
    text-align: center;
    color: vars.$white;
    margin-left: 7px;
    cursor: pointer;
}

.options-dropdown {
    position: absolute;
    right: 14px;
    height: 30px;
    margin-top: -4px;
    padding: 0 8px;
    border: 1px solid vars.$platinum-dark;
    border-radius: 4px;
    background-color: vars.$white;
    color: vars.$slate;
    font-size: vars.$font__size--default;
    font-family: vars.$font__face--default;
    cursor: pointer;

    &:focus {
        outline: none;
        border-color: vars.$blue;
    }
}

